:bug: COMPASS-1330 Remove extra padding from create index modal
It was also previously inconsistent with the Create/Drop DB/Collection modals, which have no extra padding.

--- a/src/internal-packages/indexes/styles/create-index-modal.less
+++ b/src/internal-packages/indexes/styles/create-index-modal.less
@@ -6,9 +6,6 @@
   }
 
   .create-index-modal-content {
-    padding-left: 40px;
-    padding-right: 40px;
-
     .modal-header {
       padding-bottom: 4px;
     }
